# BubbleMAC_INFOCOM

./: BubbleProtocol.cpp  BubbleProtocol.h  CMakeLists.txt  Protocol_80211.cpp  Protocol_80211.h  Protocol_VeMAC.cpp  Protocol_VeMAC.h  UpLocation.cpp  UpLocation.h  collision.cpp  communication.cpp  communication.h  main.cpp  packets.cpp  packets.h  parameters.cpp  parameters.h  vehicle.cpp  vehicle.h
